--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   postgres:
     image: postgres:latest
@@ -54,9 +52,17 @@ services:
   test-utils:
     build: ./test-utils
     depends_on:
+      - rest-api
+      - graphql-api
+      - soap-api
+      - grpc-api
+      - prometheus
       - postgres
-    volumes:
-      - ./test-utils:/app
+    environment:
+      - REST_API_URL=http://rest-api:9080
+      - GRAPHQL_API_URL=http://graphql-api:9081
+      - SOAP_API_URL=http://soap-api:9082
+      - GRPC_API_URL=grpc-api:9093
 
   prometheus:
     image: prom/prometheus
